# assembler

./: -  .gitignore  BUILD.md  CMakeLists.txt  analyze_pe.py  assembler.cpp  assembler.hh  build.bat  build.sh  build_cmake.bat  build_cmake.sh  elf.cpp  elf.hh  hello.asm  input.asm  main.cpp  parser.cpp  parser.hh  pe.cpp  pe.hh  readme.md  sample-exec.elf  simple_test.asm  test.asm  test.elf  test_all_syscalls.asm  test_assembler.cpp  test_close.asm  test_from_obj  test_mmap.asm  test_open.asm  test_read.asm  test_reloc.asm  test_write.asm  translator.cpp  translator.hh  types.hh  updates.md  win_test.asm  write_test.asm
.kiro/specs/assembler-fixes/: design.md  requirements.md  tasks.md
